--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
 .main{
     font-family: serif;
 
-    background-color: rgba(255, 255, 255, 0.3);
+    background-color: rgba(255, 255, 255, .5);
     padding: 25px 50px;
     position: fixed;
     top: 50%;
@@ -35,6 +35,7 @@ body{
 }
 
 #nav{
+  padding: 25px;
  }
 #name{
   font-size: 200%;
@@ -43,6 +44,10 @@ a{
   margin: 15px;
 }
 
-#contact{
+#Gallery{
+
+}
+
+#Contact{
 
 }
