--- a/style/index.css
+++ b/style/index.css
@@ -4,13 +4,40 @@
 }
 
 body{
- /* background-image: url('Background.jpg');
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover; */
- 
+  -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: fadein 2s; /* Firefox < 16 */
+  -ms-animation: fadein 2s; /* Internet Explorer */
+  -o-animation: fadein 2s; /* Opera < 12.1 */
+  animation: fadein 2s;
+}
+@keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
 }
 
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
 .main{
   display: grid;
   grid-column-gap: 50px ;
@@ -18,12 +45,11 @@ body{
   font-weight: 100;
   background-color: rgba(255, 255, 255, .7);
   padding: 30px 50px;
-  position: fixed;
+  position: absolute;
   top: 50%;
   left: 50%;
   margin-right: -50%;
-  transform: translate(-50%, -50%)
-  
+  transform: translate(-50%, -50%);
 }
 #navigation{
   block-size: 100px;
@@ -75,6 +101,8 @@ a{
   color: gray;
   text-align: left;
   width: 60%;
-  /* margin: 1% auto; */
   font-size: 15px;
+}
+.text{
+  color:gray;
 }
