fix linking issues

--- a/style/index.css
+++ b/style/index.css
@@ -55,11 +55,6 @@ body{
   block-size: 100px;
   text-align: center;
   padding: 100px;
-}
-.nav{
-  
- }
- .nav a{
   margin: 2%;
   font-size: 15px;
   color: gray;
@@ -67,7 +62,16 @@ body{
   font-size: 15px;
   font-weight: 100;
 }
-.nav a:hover{
+
+ #navigation a{
+  margin: 2%;
+  font-size: 15px;
+  color: gray;
+  text-decoration: none;
+  font-size: 15px;
+  font-weight: 100;
+}
+#navigation a:hover{
   color: lightgray;
 }
 
@@ -88,7 +92,6 @@ body{
    max-width: 550px;
    max-height: 550px;
 }
-
 
 #name{
   font-size: 50px;
